--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 body {
   font-family: "Montserrat", serif;
   font-weight: 700;
-  background: hsl(240, 78%, 95%);
+  background: hsl(240, 67%, 96%);
   color: hsl(232, 13%, 33%);
 }
 .container {
@@ -61,7 +61,7 @@ li {
 hr {
   width: 85%;
   margin: 0 auto;
-  border: 0.5px solid hsl(234, 14%, 74%);
+  border: 0.5px solid hsla(240, 12%, 86%, 0.884);
 }
 
 .price-table {
@@ -82,6 +82,15 @@ hr {
   background: hsl(240, 78%, 98%);
   justify-content: center;
   border-radius: 5px;
+  -webkit-box-shadow: -2px 4px 10px 2px rgba(60, 65, 163, 0.25);
+  -moz-box-shadow: -2px 4px 10px 2px rgba(60, 65, 163, 0.25);
+  box-shadow: -2px 4px 10px 2px rgba(60, 65, 163, 0.25);
+}
+
+.master {
+  -webkit-box-shadow: 2px 4px 10px 2px rgba(60, 65, 163, 0.25);
+  -moz-box-shadow: 2px 4px 10px 2px rgba(60, 65, 163, 0.25);
+  box-shadow: 2px 4px 10px 2px rgba(60, 65, 163, 0.25);
 }
 .table .learn-more {
   background-image: linear-gradient(
